<resources>
    <string name="app_name">Falbook</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="title_activity_kafe">KafeActivity</string>
    <string name="profilini_duzenle">Profilini Düzenle</string>
    <string name="sifreni_degistir">Şifreni Değiştir</string>
    <string name="hesap_ayarlari">HESAP AYARLARI</string>
    <string name="geri_bildirim_ve_destek">GERİ BİLDİRİM VE DESTEK</string>
    <string name="begendin_mi">Uygulamamızı beğendin mi?</string>
    <string name="uygulamamizi_paylas">Uygulamamızı paylaş</string>
    <string name="sorun_mu_yasiyorsun">Sorun mu yaşıyorsun?</string>
    <string name="hakkimizda">HAKKIMIZDA</string>
    <string name="falbook_hakkinda">Falbook Hakkında</string>
    <string name="cikis">Çıkış</string>
    <string name="drawer_acilis">Acilis</string>
    <string name="drawer_kapanis">Kapanış</string>
    <string name="bos_yazi">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget nibh risus. Fusce porttitor lectus est, vel luctus sapien accumsan ac. Donec malesuada magna et pretium laoreet. Vestibulum tristique purus non laoreet euismod. Etiam sed lobortis dolor. Duis accumsan nisi at fringilla tristique. Duis eget elit ipsum. Phasellus accumsan, tellus quis dignissim semper, quam sapien pulvinar dolor, nec sodales est ante ut turpis. Morbi auctor urna sit amet odio tempor auctor. Cras quis euismod lacus. Curabitur luctus vestibulum diam et mattis. Morbi ullamcorper malesuada est, a efficitur neque tempor non. Vivamus congue enim ut massa posuere aliquet.  Cras sapien lorem, fermentum sit amet ipsum non, dictum cursus tellus. Nunc dignissim erat purus, ac vulputate mi tincidunt at. Sed eros urna, molestie non dignissim id, malesuada a mi. Nunc a sollicitudin justo. Maecenas at odio rhoncus, ultrices libero et, pretium augue. In non pulvinar nisi. Phasellus in diam eget massa fringilla elementum.</string>
    <string name="profilim">PROFİLİM</string>
    <string name="kaydet">KAYDET</string>
    <string name="sifre_degistir">Şifre Değiştir</string>
    <string name="gonder">Gönder</string>
    <string name="gonder_butonuna_bastiktan_sonra_lutfen_onay">Gönder butonuna bastıktan sonra lütfen e-mailinizi kontrol ediniz.</string>
    <string name="sik_sorulan_sorular">Sık Sorulan Sorular</string>
    <string name="iletisim">iletişim</string>
    <string name="iletisim_bilgilendirme">Mail adresinize dönüş yapılacaktır. Profiliniz den hangi mail adresinize dönüş yapılacağını görebilirsiniz.</string>
    <string name="iletisim_hint">Görüşünüzü/Sorununuzu veya Önerilerinizi bize iletebilirsiniz. </string>
    <string name="telve_satin_al">Telve Satın Al</string>
    <string name="soru_hergunbedava">Evet. Her gün tamamen bedavaya kazandığınız telveler sayesinde, uygulamamızda hiç para harcamadan bedavaya fal baktırabilirsiniz. Bedava telveleri anasayfadaki telve kazan sayfasından her gün kazanabilirsiniz.</string>
    <string name="enfazla">En fazla 20/25 dakika arasında size dönüş sağlanacaktır.</string>
    <string name="dilek_hint">İçinizden geçenleri ya da belirtmek istediğiniz herhangi bir şeyi yazabilirsiniz.</string>
    <string name="fal_baktir">Fal Baktır</string>
    <string name="web_de_oku">Web de Oku</string>
    <string name="evet_sil">Evet, SİL!</string>
    <string name="fal_yorumunuz">Fal yorumunuz</string>
    <string name="base64encodedpublickey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAif0NSwdJzs+PKdBDKn/nM9/4M/kYUkcY6FbDwKJGlH+ih9p0BM1Oc7j+ldZ/tszuTalSIzerD+jutDB2Hm/6xhGAdQYzLoZIMFvaE0a15L1YV+KtrUJIHyEgsKDn3yMs3i5kN/muRdNrYYjY89aun/TplL+63rAVfIzctLV1i5Lia2MCFZKAxyT/TDZCg2RU6BDKGHy+uomFCdZUyfSj8yfsLumDX1bNbZw6YS65kCWdP6dgAna0/UaROcnxqSvGRxxyQ1Q23dgLA+TEKe8fyAxDPR0a27NQ6Rz/5wuFotIGcN9/ULUdYn8pdG/aM366XVM1YHqykiXxE1otHyWtHwIDAQAB</string>
    <string name="izle_kazan">İzle kazanın çalışması için reklamın yüklenmiş olması lazım. Reklamın yüklenip yüklenmediğini anlamak için izle-kazanın çerçevesinin regine dikkat edebilirsiniz. Eğer çerçeve rengi yeşile dönmüş ise reklam yüklenmiş demektir, tıklayıp bedava telve kazanabilirsiniz. İzle kazanda 24 saat içerisinde en fazla izleyebileceğiniz sayı sınırlıdır. Bu sınıra ulaştıkdan sonra ancak 24 saat sonra izleyebilirisiniz.</string>
    <string name="mail_degistir">Mail Değiştir</string>
    <string name="send_to">Paylaş</string>
    <string name="kayitolurken_bilgilendirme">Kayıt olarak <b>Kullanım ve Gizlilik Koşulları</b>\'nı kabul ediyorum.</string>
    <string name="gizlilikpolitikasi_baslik">Falbook Uygulaması Kullanım Koşulları ve Gizlilik Politikası</string>
    <string name="invitation_deep_link">Fal Baktır - Falbook | Hemen fincanının fotoğrafını gönder, senin de falını yorumlayalım. Ayrıca bu linkten indirebilirsin yada detaylı bilgi için falbookapp.com u ziyaret edebilirsin.\nhttps://fw29m.app.goo.gl/V9Hh\n </string>
    <string name="foto_trick">Fal gönder sayfasında ortadaki yuvarlak tuşa basarsanız direk olarak kamera açılır ve daha hızlı, daha rahat kahvenizin fotoğrafını çekebilirsiniz.</string>
    <string name="profil_duzen_trick">Sol taraftaki çekmece menüyü çekerek(elinizi soldan sağ a kaydırarak) Profilini Düzenle sayfasından profil bilgilerini düzenleyebilirsin.</string>
    <string name="kalici_uye_trick">Profilimi Düzenle sayfasından bütün bilgilerinizi doldurarak kalıcı üyemiz olabilirsiniz.</string>
    <string name="satinal_trick">Anasayfa da XX TELVENİZ VAR butonuna basarak telve satın alma sayfasına gidebilirsiniz.</string>
    <string name="sadecefal_trick">Maalesef hayır, şu anda sadece kahve fal ı baktırabilirsiniz, alakasız gönderilen fotoğraflar değerlendirmeye alınmayacaktır.</string>
    <string name="nasilgonderilir_trick">2 tane fincan, 1 tane tabak fotoğrafı çektip bilgilerinizi doldurduktan sonra yorumlatmak istediğiniz falcıyı seçip gönderebilirsiniz. Daha sonrasında falcılarımız sizin için özenle sizin falınızı yorumlayacaktır.</string>
    <string name="enfazlakacdk_trick">Fal yorumları elinize genellikle 25/30dk arasında elinizde olur, ancak falcıların çeşitli işlerinden dolayı çok nadir de olsa daha fazla gecikmeler olabilir. Bu gecikmeler 2 saatten fazla sürmez. Eğer olağanüstü bir durum varsa iletişimden bizimle iletişime geçiniz.</string>
    <string name="iptal_kosulu">Bir falın sizin beklentinizi karşılamadığını, yanlış yorumlandığını veya farklı bir memnuniyetsizliğiniz var ise Anasayfadaki iletişim bölümünden bizimle iletişime geçin. Sizin mutluluğunuz için çalışıyoruz.</string>
    <string name="_200_telve">200 Telve</string>
    <string name="_19tl">19TL</string>
    <string name="_300_telve">300 Telve</string>
    <string name="_25tl">25TL</string>
    <string name="_39tl">39TL</string>
    <string name="_500_telve">500 Telve</string>
    <string name="_1000telve">1000Telve</string>
    <string name="_69tl">69TL</string>
    <string name="video_zleyerek_kazan">Video İzleyerek Kazan</string>
    <string name="_24_saat_i_erisinde_en_fazla_5_kere_izleyebilirsiniz">24 saat içerisinde en fazla 5 kere izleyebilirsiniz!</string>
</resources>