<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="128dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:id="@+id/ll">
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/card_dusuk_telve"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/beanbackgroundcircle"
                    android:src="@drawable/telvebuton"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTelveSayisi"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/_200_telve"/>
                <TextView
                    android:id="@+id/txtTelveParasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/_19tl"
                    android:textColor="#CCFFFFFF"
                    android:textSize="14sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="SADECE 7.99TL"
                    android:paddingBottom="5dp"
                    android:textColor="@color/yello"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/card_normal_telve"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/beanbackgroundcircle"
                    android:src="@drawable/telvebuton"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTelveSayisi300"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/_300_telve"/>
                <TextView
                    android:id="@+id/txtTelveParasi300"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/_25tl"
                    android:textColor="#CCFFFFFF"
                    android:textSize="14sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="SADECE 9.99TL"
                    android:paddingBottom="5dp"
                    android:textColor="@color/yello"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/card_buyuk_telve"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/beanbackgroundcircle"
                    android:src="@drawable/telvebuton"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTelveSayisi500"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/_500_telve"/>
                <TextView
                    android:id="@+id/txtTelveParasi500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/_39tl"
                    android:textColor="#CCFFFFFF"
                    android:textSize="14sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="SADECE 14.99TL"
                    android:paddingBottom="5dp"
                    android:textColor="@color/yello"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/card_cokbuyuk_telve"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/beanbackgroundcircle"
                    android:src="@drawable/telvebuton"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTelveSayisi1000"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/_1000telve"/>
                <TextView
                    android:id="@+id/txtTelveParasi1000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/_69tl"
                    android:textColor="#CCFFFFFF"
                    android:textSize="14sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="SADECE 19.99TL"
                    android:paddingBottom="5dp"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/card_izle_kazan"
            android:clickable="true"
            android:layout_width="280dp"
            android:layout_height="175dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imgTv"
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:background="@drawable/tv_icon"
                    android:layout_marginTop="8dp"
                    app:backgroundTint="@color/colorAccent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtIzleyerekKazan"
                    android:textSize="18sp"
                    android:text="@string/video_zleyerek_kazan"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_24_saat_i_erisinde_en_fazla_5_kere_izleyebilirsiniz"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</LinearLayout>
</android.support.v4.widget.NestedScrollView>